--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "~1.15.1",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": ">= 0.0.0",
     "express-session": "^1.15.3",
     "google-auth-library": "^0.10.0",
     "googleapis": "^19.0.0",
-    "mongoose": "^4.10.4"
+    "method-override": "^2.3.9",
+    "mongoose": "^4.10.4",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
