--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "cookie-parser": "^1.4.3",
     "express": ">= 0.0.0",
     "express-session": "^1.15.3",
-    "google-auth-library": "^0.10.0",
-    "googleapis": "^19.0.0",
     "method-override": "^2.3.9",
     "mongoose": "^4.10.4",
+    "request": "^2.81.0",
     "swig": "^1.4.2"
   },
   "devDependencies": {
