--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "install": "^0.10.1",
     "mongoose": "^4.10.4",
     "morgan": "~1.7.0",
+    "npm": "^5.0.3",
     "passport": "^0.3.2",
     "request": "^2.81.0",
     "serve-favicon": "~2.3.0"
