--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "npm": "^5.0.3",
     "passport": "^0.3.2",
     "request": "^2.81.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
